src/style.css
h1 {
  margin-bottom: 0;
}

ul {
  margin: 0;
  padding: 0;
}
li {
  list-style: none;
  margin: 0;
  padding: 0;
}
body {
  background: radial-gradient(
    592px at 48.2% 50%,
    rgba(255, 255, 249, 0.6) 0%,
    rgb(160, 199, 254) 74.6%
  );
  color: rgb(50, 58, 103);
  font-family: "Questrial", sans-serif;
}
.dark {
  background: linear-gradient(
    112.1deg,
    rgb(32, 38, 57) 11.4%,
    rgb(63, 76, 119) 70.2%
  );
  color: rgb(226, 235, 255);
}
li :first-letter {
  text-transform: capitalize;
}
.description:first-letter {
  text-transform: capitalize;
}
.btn {
  background-color: rgb(244, 197, 55);
  width: 80px;
}
.dark .btn {
  background-color: rgb(226, 235, 255);
  width: 80px;
}

.weather-app-box {
  max-width: 800px;
  margin: 0 auto;
  margin-top: 40px;
  border: 5px solid rgb(244, 197, 55);
  padding: 30px;
  border-radius: 40px;
}
.dark .weather-app-box {
  border: 5px solid rgb(133, 172, 246);
}
.header-overview {
  padding-bottom: 20px;
}

.temperature {
  font-size: 60px;
}
.units {
  position: relative;
  top: -30px;
}

.git-link {
  text-decoration: none;
}

.weather-forecast {
  margin-top: 20px;
  text-align: center;
}

.weather-forecast-date {
  font-size: 18px;
  opacity: 0.5;
}
.weather-forecast-temperatures {
  font-size: 13px;
}
.weather-forecast-min {
  opacity: 0.6;
}

small {
  position: absolute;
  margin-left: 370px;
  margin-top: 40px;
}

